# intra-cli

./: .env.example  .gitignore  README.md  pyproject.toml
intra-cli/: main.py
intra_cli/: api_client.py  auth.py  config.py  main.py
